--- a/dev/scss/utils/variables.scss
+++ b/dev/scss/utils/variables.scss
@@ -1,4 +1,4 @@
-$font: 'OpenSans'; /* Семейство шрифта брать из ./dev/scss/fonts.scss */
+$font: 'gothampro'; /* Семейство шрифта брать из ./dev/scss/fonts.scss */
 $fontSizeMain: 16;
 $time: 0.3s;
 
@@ -8,3 +8,4 @@ $white: #210E09;
 $active-color: #e3000f;
 $gray-bg: #f8f8f8;
 $border-radius: 4px;
+
