--- a/dev/scss/fonts.scss
+++ b/dev/scss/fonts.scss
@@ -1,48 +1,45 @@
 @font-face {
-  font-family: "opensans";
+  font-family: "gothampro";
   font-display: swap;
-  src: url("../fonts/bold_OpenSans.woff") format("woff"),
-    url("../fonts/bold_OpenSans.woff2") format("woff2");
+  src: url("../fonts/bold_Gothampro.woff") format("woff"),
+    url("../fonts/bold_Gothampro.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
+
+
 @font-face {
-  font-family: "opensans";
+  font-family: "gothampro";
   font-display: swap;
-  src: url("../fonts/extrabold_OpenSans.woff") format("woff"),
-    url("../fonts/extrabold_OpenSans.woff2") format("woff2");
+  src: url("../fonts/black_Gothampro.woff") format("woff"),
+    url("../fonts/black_Gothampro.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "opensans";
+  font-family: "gothampro";
   font-display: swap;
   src: url("../fonts/regular_OpenSans.woff") format("woff"),
     url("../fonts/regular_OpenSans.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "opensans";
+  font-family: "gothampro";
   font-display: swap;
-  src: url("../fonts/light_OpenSans.woff") format("woff"),
-    url("../fonts/light_OpenSans.woff2") format("woff2");
+  src: url("../fonts/light_Gothampro.woff") format("woff"),
+    url("../fonts/light_Gothampro.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "opensans";
+  font-family: "gothampro";
   font-display: swap;
   src: url("../fonts/medium_OpenSans.woff") format("woff"),
     url("../fonts/medium_OpenSans.woff2") format("woff2");
   font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "opensans";
-  font-display: swap;
-  src: url("../fonts/semibold_OpenSans.woff") format("woff"),
-    url("../fonts/semibold_OpenSans.woff2") format("woff2");
-  font-weight: 600;
   font-style: normal;
 }
